--- a/P3tr0viCh.Database/P3tr0viCh.Database.csproj
+++ b/P3tr0viCh.Database/P3tr0viCh.Database.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Actions.cs" />
     <Compile Include="BaseId.cs" />
+    <Compile Include="BaseText.cs" />
     <Compile Include="ConnectionBase.cs" />
     <Compile Include="ConnectionLogin.cs" />
     <Compile Include="ConnectionFireBird.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="ConnectionServerDatabase.cs" />
     <Compile Include="ConnectionSQLite.cs" />
     <Compile Include="IBaseId.cs" />
+    <Compile Include="IBaseText.cs" />
     <Compile Include="IConnection.cs" />
     <Compile Include="LocalizedAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
