--- a/P3tr0viCh.Database/P3tr0viCh.Database.csproj
+++ b/P3tr0viCh.Database/P3tr0viCh.Database.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ConnectionServer.cs" />
     <Compile Include="ConnectionServerDatabase.cs" />
     <Compile Include="ConnectionSQLite.cs" />
+    <Compile Include="DataGridViewExtensions.cs" />
     <Compile Include="IBaseId.cs" />
     <Compile Include="IBaseText.cs" />
     <Compile Include="IConnection.cs" />
