--- a/P3tr0viCh.Database/P3tr0viCh.Database.csproj
+++ b/P3tr0viCh.Database/P3tr0viCh.Database.csproj
@@ -75,6 +75,8 @@
     <Compile Include="ConnectionServerDatabase.cs" />
     <Compile Include="ConnectionSQLite.cs" />
     <Compile Include="DataGridViewExtensions.cs" />
+    <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="IBaseId.cs" />
     <Compile Include="IBaseText.cs" />
     <Compile Include="IConnection.cs" />
